# POC_STT_VAD

./: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml  test.py  voice_input_pipeline_agentsession.py  voice_input_pipeline_agentsession_v1.py  voice_input_pipeline_rtc.py
final/: agent_audio_track.py  orchestrator.py  tools.py
final/services/: kb.py
src/: ingest.py  main.py  mainv1.py  mic_participant.py  schema.sql  stt_pipeline.py  tools.py  tts_pipeline.py  tts_pipeline_v1.py  tts_pipeline_v2.py
srcv1/: agent_audio_track.py  database.py  index.html  main.py  orchestrator.py  orchestratorv0_1.py  stt.py  stt_test.html  test_main.py  tools.py  tts.py
srcv1/routers/: personas.py
srcv1/services/: schema.sql
