[project]
name = "poc-stt-vad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "asyncpg>=0.31.0",
    "azure-ai-formrecognizer>=3.3.3",
    "deepgram-sdk>=7.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "livekit-agents[cerebras,google]~=1.5.2",
    "livekit-plugins-ai-coustics>=0.2.15",
    "livekit-plugins-azure>=1.5.12",
    "livekit-plugins-cartesia>=1.5.12",
    "livekit-plugins-groq>=1.5.12",
    "livekit-plugins-silero>=1.5.12",
    "livekit-plugins-turn-detector>=1.5.12",
    "python-multipart>=0.0.30",
    "sounddevice>=0.5.5",
    "uvicorn>=0.48.0",
]
